<resources>
    <string name="app_name">ConfApp</string>
    <string name="activity_hello_what_is_your_name">Как тебя зовут?</string>
    <string name="activity_hello_name_hint">Введи имя</string>
    <string name="activity_upcoming_events_button_sync_loading">Sync loading</string>
    <string name="activity_upcoming_events_button_async_loading">Async loading</string>
    <string name="activity_upcoming_events_internet_access_alert">Please check your internet access</string>
    <string name="continue_button_text">Continue</string>
    <!--    activity_upcoming_events-->
    <string name="activity_upcoming_events_shared_prefs_name">Hello %1$s!</string>
    <string name="activity_upcoming_events_favorite_text">В избранные</string>
    <!--    activity_events_card_layout-->
    <string name="activity_events_card_layout_next_event">Next event</string>
    <string name="activity_events_card_layout_date_time">Time example</string>
    <string name="activity_events_card_layout_speaker_name">Speaker name example</string>
    <string name="activity_events_card_layout_speaker_company_name">Speaker company name example</string>
    <string name="activity_events_card_layout_event_title">Event title example</string>
    <!--    activity_branch_item-->
    <string name="activity_branch_item_branch_title">Branch title example</string>
    <!--    event_details-->
    <string name="activity_event_details_speaker_status">Приглашенный спикер</string>
    <string name="activity_event_details_event_description">Системные уведомления позволяют пользователям получать информацию, не заходя в приложение, и быстрее с ним взаимодействовать. Как использовать все возможности системы уведомлений? Как сделать уведомления в каждой версии ОС и использовать их возможности по максимуму? NotificationCompat не решит все за вас. Обо всем этом поговорим в докладе.</string>
    <string name="activity_event_details_date_and_time">15:00 - 16:00 • Зал номер 5</string>
    <string name="activity_event_details_speaker_job">Mobile Lead в Replika.ai</string>
    <string name="activity_event_details_speaker_name">Кирилл Розов</string>
    <string name="activity_event_details_event_title">Увлекательная жизнь в панели уведомлений</string>
</resources>