<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/activity_events_details_arrow_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_arrow_back"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:src="@drawable/logo_kolesa_white"
                    />

                <ImageView
                    android:id="@+id/activity_events_details_favorite_image_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/ic_favorite_border"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/activity_events_details_speaker_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_event_details_image_height"
            android:layout_marginBottom="@dimen/layout_spacing_8x"
            />

        <TextView
            android:id="@+id/activity_events_details_invited_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:background="@drawable/bg_event_state"
            android:paddingHorizontal="@dimen/layout_spacing_10x"
            android:text="@string/activity_event_details_speaker_status"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13x"
            />

        <TextView
            android:id="@+id/activity_events_details_speaker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginTop="@dimen/layout_spacing_8x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            tools:text="@string/activity_event_details_speaker_name"
            />

        <TextView
            android:id="@+id/activity_events_details_speaker_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginTop="@dimen/layout_spacing_8x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_13x"
            tools:text="@string/activity_event_details_speaker_job"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_1x"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginTop="@dimen/layout_spacing_16x"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/activity_events_details_place_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginVertical="@dimen/layout_spacing_8x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14x"
            tools:text="@string/activity_event_details_date_and_time"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke_1x"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/activity_events_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginVertical="@dimen/layout_spacing_8x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16x"
            android:textStyle="bold"
            tools:text="@string/activity_event_details_event_title"
            />

        <TextView
            android:id="@+id/activity_event_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_spacing_16x"
            android:layout_marginBottom="@dimen/layout_spacing_48x"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14x"
            tools:text="@string/activity_event_details_event_description"
            />
    </LinearLayout>
</LinearLayout>